<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/hatshuana_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Enter_pass"
        android:layout_alignLeft="@+id/Enter_pass"
        android:layout_alignRight="@+id/Enter_pass"
        android:layout_marginBottom="41dp"
        android:textColor="@color/black"
        android:textSize="15dip"
        android:text="@string/enter_name" />
    
    <TextView
        android:id="@+id/Enter_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="137dp"
        android:layout_toRightOf="@+id/Enter_pass"
        android:textColor="@color/black"
        android:textSize="15dip"
        android:text="@string/Enter_pass" />

    <EditText
        android:inputType="text"
        android:id="@+id/editname"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Enter_name"
        android:layout_alignBottom="@+id/Enter_name"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/Enter_name" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Enter_pass"
        android:layout_alignBottom="@+id/Enter_pass"
        android:layout_alignLeft="@+id/editname"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login" />
    
</RelativeLayout>